# openharmony-qemu-porting

./: README.md  install.sh  qemu-run.sh
device/board/qemu/arm64_virt/: BUILD.gn  NOTICE  README_zh.md  device.gni  ohos.build
device/board/qemu/arm64_virt/bootanimation/: BUILD.gn
device/board/qemu/arm64_virt/cfg/: BUILD.gn  fstab.arm64_virt  init.arm64_virt.cfg  init.arm64_virt.usb.cfg
device/soc/qemu/arm64_virt/: NOTICE  soc.gni
device/soc/qemu/arm64_virt/hardware/: BUILD.gn
device/soc/qemu/arm64_virt/hardware.rk3568/: BUILD.gn
device/soc/qemu/arm64_virt/hardware.rk3568/display/: BUILD.gn
device/soc/qemu/arm64_virt/hardware/display/: BUILD.gn
device/soc/qemu/arm64_virt/hardware/display/include/: display_gralloc_private.h  qemu_display_log.h
device/soc/qemu/arm64_virt/hardware/display/src/display_device/composer/: display_composer_vdi_impl.cpp  display_composer_vdi_impl.h  hdi_composer.cpp  hdi_composer.h  hdi_gfx_composition.cpp  hdi_gfx_composition.h
device/soc/qemu/arm64_virt/hardware/display/src/display_device/core/: hdi_device_common.h  hdi_device_interface.cpp  hdi_device_interface.h  hdi_display.cpp  hdi_display.h  hdi_fd.h  hdi_layer.cpp  hdi_layer.h  hdi_session.cpp  hdi_session.h
device/soc/qemu/arm64_virt/hardware/display/src/display_device/drm/: drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_crtc.h  drm_device.cpp  drm_device.h  drm_display.cpp  drm_display.h  drm_encoder.cpp  drm_encoder.h  drm_plane.cpp  drm_plane.h  drm_vsync_worker.cpp  drm_vsync_worker.h  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp  hdi_drm_layer.h
device/soc/qemu/arm64_virt/hardware/display/src/display_gfx/: display_gfx.c
device/soc/qemu/arm64_virt/hardware/display/src/display_gralloc/: display_buffer_vdi_impl.cpp  display_gralloc_gbm.cpp  phytium_gbm_internal.h  qemu_gbm.cpp  qemu_gbm.h
device/soc/qemu/arm64_virt/hardware/gpu/lib-mesa-swrast/: BUILD.gn  libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libgbm.so.1.0.0
device/soc/qemu/arm64_virt/hardware/gpu/lib-mesa-virgl/: BUILD.gn  libEGL.so.1.0.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
device/soc/qemu/common/: NOTICE  README.en.md  README.md
device/soc/qemu/common/hardware/display/: BUILD.gn
device/soc/qemu/common/hardware/display/include/: display_common.h
device/soc/qemu/common/hardware/display/src/display_device/: drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_crtc.h  drm_device.cpp  drm_device.h  drm_display.cpp  drm_display.h  drm_encoder.cpp  drm_encoder.h  drm_plane.cpp  drm_plane.h  drm_vsync_worker.cpp  drm_vsync_worker.h  hdi_composer.cpp  hdi_composer.h  hdi_device_common.h  hdi_device_interface.cpp  hdi_device_interface.h  hdi_display.cpp  hdi_display.h  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp  hdi_drm_layer.h  hdi_gfx_composition.cpp  hdi_gfx_composition.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_netlink_monitor.h  hdi_session.cpp  hdi_session.h  hdi_shared_fd.h
device/soc/qemu/common/hardware/display/src/display_gfx/: display_gfx.c
device/soc/qemu/common/hardware/display/src/display_gralloc/: display_gralloc.c  display_gralloc_gbm.c  display_gralloc_gbm.h  hi_gbm.c  hi_gbm.h  hisilicon_drm.h  wayland_drm_auth_client.c
device/soc/qemu/common/hardware/gpu/include/: gbm.h
device/soc/qemu/common/hardware/isp/bin64/: ispserver
device/soc/qemu/common/hardware/mpp/include/: mpi_enc_utils.h  mpp_allocator.h  mpp_buffer.h  mpp_common.h  mpp_dev_defs.h  mpp_device.h  mpp_env.h  mpp_err.h  mpp_eventfd.h  mpp_frame.h  mpp_hash.h  mpp_list.h  mpp_log.h  mpp_mem.h  mpp_mem_pool.h  mpp_meta.h  mpp_packet.h  mpp_platform.h  mpp_queue.h  mpp_rc_api.h  mpp_rc_defs.h  mpp_runtime.h  mpp_server.h  mpp_service.h  mpp_service_api.h  mpp_soc.h  mpp_task.h  mpp_thread.h  mpp_time.h  mpp_trace.h  osal_2str.h  rk_mpi.h  rk_mpi_cmd.h  rk_type.h  rk_vdec_cfg.h  rk_vdec_cmd.h  rk_venc_cfg.h  rk_venc_cmd.h  rk_venc_ref.h  vcodec_service.h  (+3 more)
device/soc/qemu/common/hardware/mpp/mpp/hdi_mpp/: BUILD.gn  hdi_mpp_mpi.cpp  hdi_mpp_mpi.h
device/soc/qemu/common/hardware/mpp/src/: mpi_enc_utils.c
device/soc/qemu/common/hardware/rga/: BUILD.gn
device/soc/qemu/common/hardware/rga/include/: GrallocOps.h  RgaApi.h  RgaMutex.h  RgaSingleton.h  RockchipRga.h  drmrga.h  im2d.h  platform_gralloc4.h  rga.h
device/soc/qemu/common/kernel/: NOTICE
device/soc/qemu/common/sdk_linux/: Makefile
device/soc/qemu/common/sdk_linux/arch/arm64/: Kconfig.platforms
device/soc/qemu/common/sdk_linux/drivers/: Kconfig  Makefile
device/soc/qemu/common/sdk_linux/drivers/clocksource/: timer-rockchip.c
device/soc/qemu/common/sdk_linux/drivers/cpufreq/: cpufreq-dt-platdev.c  cpufreq-dt.c  cpufreq_userspace.c  rockchip-cpufreq.h
device/soc/qemu/common/sdk_linux/drivers/devfreq/: devfreq.c
device/soc/qemu/common/sdk_linux/drivers/dma-buf/: dma-buf.c  dma-fence.c  dma-heap.c  sw_sync.c  sync_debug.c  sync_debug.h
device/soc/qemu/common/sdk_linux/drivers/gpio/: gpio-rockchip.c  gpiolib-of.c  gpiolib-of.h
device/soc/qemu/common/sdk_linux/drivers/hid/: hid-core.c  hid-input.c
device/soc/qemu/common/sdk_linux/drivers/hooks/: Kconfig  Makefile  cam_heap_hooks.c
device/soc/qemu/common/sdk_linux/drivers/i2c/: i2c-core-base.c
device/soc/qemu/common/sdk_linux/drivers/iommu/: dma-iommu.c  iommu.c  rockchip-iommu.c
device/soc/qemu/common/sdk_linux/drivers/irqchip/: irq-gic-v3-its.c  irq-gic-v3.c  irq-gic-v4.c
device/soc/qemu/common/sdk_linux/drivers/mfd/: rk808.c
device/soc/qemu/common/sdk_linux/drivers/nvmem/: core.c  rockchip-efuse.c  rockchip-otp.c
device/soc/qemu/common/sdk_linux/init/: Kconfig  initramfs.c  main.c
device/soc/qemu/common/sdk_linux/ipc/: msg.c  sem.c  shm.c  util.c
device/soc/qemu/common/sdk_linux/kernel/: cpu.c  reboot.c
device/soc/qemu/common/sdk_linux/scripts/: resource_tool.c
patch/: 0001-build_whitelist.patch  0001-kylin_build_whitelist.patch  0002-productdefine_common_inherit_rich.patch  0003-kernel_linux_build.patch  0006-drivers_hdf_core.patch  0007-foundation_graphic_graphic_2d_config.patch
(+352 files in other folders)
