# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_source_set("hdi_mpp") {
  include_dirs = [
    "//device/soc/rockchip/common/hardware/mpp/include",
    "//drivers/framework/include/utils",
    "//drivers/hdf_core/adapter/uhdf2/osal/include/",
    "//drivers/hdf_core/framework/include/utils",
  ]
  sources = [ "hdi_mpp_mpi.cpp" ]
  deps = [ "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog" ]

  cflags = [
    "-Wno-format",
    "-Wno-unused-parameter",
    "-Wno-unused-function",
    "-Wno-implicit-function-declaration",
    "-Wno-incompatible-pointer-types",
    "-Wno-int-conversion",
    "-Wno-macro-redefined",
  ]
}
